Implement, test and document industry endpoint
